--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html>
   <head>
     <title>Summa Discord Server Website - Main Page</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
   </head>
-  <body>
-    
+  <body onload="document.getElementById('default').click();">
+  <div id="tabs">
+    <button class="tabbutton" id="default" type="button" onclick="">Home</button>
+    <button class="tabbutton" type="button" onclick="">Discord Guides</button>
+  </div>
+  <div class="tabcont" id="home">
+    <h1>Welcome to the Summa Discord Server's Website!</h1>
+  </div>
+  <div class="tabcont" id="discguide">
+    <h1>Discord Guides</h1>
+    <p>&nbsp &nbsp &nbsp &nbspThis is the place to learn how to do various things in Discord, such as setting your nickname, muting channels, etc.</p>
+  </div>
   </body>
 </html>
