--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body onload="document.getElementById('default').click();">
   <div id="tabs">
-    <button class="tabbutton" id="default" type="button" onclick="">Home</button>
-    <button class="tabbutton" type="button" onclick="">Discord Guides</button>
+    <button class="tabbutton" id="default" type="button" onclick="opentab('home')">Home</button>
+    <button class="tabbutton" type="button" onclick="opentab('discguide')">Discord Guides</button>
   </div>
   <div class="tabcont" id="home">
     <h1>Welcome to the Summa Discord Server's Website!</h1>
