--- a/mainpage.html
+++ b/mainpage.html
@@ -7,15 +7,10 @@
   </head>
   <body onload="document.getElementById('default').click();">
   <div id="tabs">
-    <button class="tabbutton" id="default" type="button" onclick="opentab('home')">Home</button>
-    <button class="tabbutton" type="button" onclick="opentab('discguide')">Discord Guides</button>
+    <a href="https://jonahlikescookies.github.io/Summa-Discord-Server/"></a>
   </div>
-  <div class="tabcont" id="home">
+  <div>
     <h1>Welcome to the Summa Discord Server's Website!</h1>
-  </div>
-  <div class="tabcont" id="discguide">
-    <h1>Discord Guides</h1>
-    <p>&nbsp &nbsp &nbsp &nbspThis is the place to learn how to do various things in Discord, such as setting your nickname, muting channels, etc.</p>
   </div>
   </body>
 </html>
