--- a/mainpage.html
+++ b/mainpage.html
@@ -7,10 +7,12 @@
   </head>
   <body onload="document.getElementById('default').click();">
   <div id="tabs">
-    <a href="https://jonahlikescookies.github.io/Summa-Discord-Server/"></a>
+    <a class="active" href="#">home</a>
+    <a href="https://jonahlikescookies.github.io/Summa-Discord-Server/discordguides.html">Discord Guides</a>
   </div>
   <div>
     <h1>Welcome to the Summa Discord Server's Website!</h1>
+    <p>&nbsp &nbsp &nbsp &nbspAs of late this website is incomplete, stay tuned for functionality!</p>
   </div>
   </body>
 </html>
