--- a/mainpage.html
+++ b/mainpage.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
   </head>
-  <body onload="document.getElementById('default').click();">
+  <body>
   <div id="tabs">
-    <a class="active" href="#">home</a>
+    <a class="active" href="#">Home</a>
     <a href="https://jonahlikescookies.github.io/Summa-Discord-Server/discordguides.html">Discord Guides</a>
   </div>
   <div>
