--- a/mainpage.html
+++ b/mainpage.html
@@ -6,7 +6,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-  <div id="tabs">
+  <div class="tabs">
     <a class="active" href="#">Home</a>
     <a href="https://jonahlikescookies.github.io/Summa-Discord-Server/discordguides.html">Discord Guides</a>
   </div>
