--- a/discordguides.html
+++ b/discordguides.html
@@ -5,6 +5,13 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    
+  <div class="tabs">
+    <a href="https://jonahlikescookies.github.io/Summa-Discord-Server/mainpage.html">Home</a>
+    <a class="active" href="#">Discord Guides</a>
+  </div>
+  <div>
+    <h1>Guides for Discord</h1>
+    <p>&nbsp &nbsp &nbsp &nbspNo functionality here!</p>
+  </div>
   </body>
 </html>
