--- a/discordguides.html
+++ b/discordguides.html
@@ -11,7 +11,8 @@
   </div>
   <div>
     <h1>Guides for Discord</h1>
-    <p>&nbsp &nbsp &nbsp &nbspNo functionality here!</p>
+    <h2>Editing a message:</h2>
+    <img src="Editing a Message in Discord.png">
   </div>
   </body>
 </html>
