--- a/discordguides.html
+++ b/discordguides.html
@@ -12,7 +12,7 @@
   <div>
     <h1>Guides for Discord</h1>
     <h2>Editing a message:</h2>
-    <img src="Editing a Message in Discord.png">
+    <img src="Editing a Message In Discord.png">
   </div>
   </body>
 </html>
