--- a/mainpage.html
+++ b/mainpage.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-  <div class="tabs">
+  <div id="tabs">
     <a class="active" href="#">Home</a>
     <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/discordguides.html">Discord Guides</a>
   </div>
