--- a/discordguides.html
+++ b/discordguides.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-  <div class="tabs">
+  <div id="tabs">
     <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/mainpage.html">Home</a>
     <a class="active" href="#">Discord Guides</a>
   </div>
