--- a/discordguides.html
+++ b/discordguides.html
@@ -7,7 +7,7 @@
   <body>
   <div id="tabs">
     <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/mainpage.html">Home</a>
-    <a class="active" href="#">Discord Guides</a>
+    <a class="active" href="#">Discord Guides</a><br>
   </div>
   <div>
     <h1>Guides for Discord</h1>
