--- a/mainpage.html
+++ b/mainpage.html
@@ -7,7 +7,7 @@
   <body>
   <div id="tabs">
     <a class="active" href="#">Home</a>
-    <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/discordguides.html">Discord Guides</a>
+    <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/discordguides.html">Discord Guides</a><br>
   </div>
   <div>
     <h1>Welcome to the Summa Discord Server's Website!</h1>
