--- a/mainpage.html
+++ b/mainpage.html
@@ -7,8 +7,9 @@
   <body>
   <div id="tabs">
     <a class="active" href="#">Home</a>
-    <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/discordguides.html">Discord Guides</a><br>
+    <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/discordguides.html">Discord Guides</a>
   </div>
+  <br>
   <div>
     <h1>Welcome to the Summa Discord Server's Website!</h1>
     <p>&nbsp &nbsp &nbsp &nbspAs of late this website is incomplete, stay tuned for functionality!</p>
