--- a/discordguides.html
+++ b/discordguides.html
@@ -7,8 +7,9 @@
   <body>
   <div id="tabs">
     <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/mainpage.html">Home</a>
-    <a class="active" href="#">Discord Guides</a><br>
+    <a class="active" href="#">Discord Guides</a>
   </div>
+  <br>
   <div>
     <h1>Guides for Discord</h1>
     <h2>Editing a message:</h2>
