Add font and comments

--- a/mainpage.html
+++ b/mainpage.html
@@ -3,9 +3,12 @@
   <head>
     <title>Summa Discord Server Website - Main Page</title>
     <link rel="stylesheet" href="styles.css">
+    <!--Comfortaa Font-->
+    <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
   </head>
   <body>
   <div id="tabs">
+    <!--Tabs-->
     <a class="active" href="#">Home</a>
     <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/discordguides.html">Discord Guides</a>
   </div><br>
