--- a/discordguides.html
+++ b/discordguides.html
@@ -3,9 +3,12 @@
   <head>
     <title>Summa Discord Server - Discord Guides</title>
     <link rel="stylesheet" href="styles.css">
+    <!--Comfortaa Font-->
+    <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
   </head>
   <body>
   <div id="tabs">
+    <!--Tabs-->
     <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/mainpage.html">Home</a>
     <a class="active" href="#">Discord Guides</a>
   </div><br>
