--- a/discordguides.html
+++ b/discordguides.html
@@ -11,6 +11,7 @@
     <!--Tabs-->
     <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/mainpage.html">Home</a>
     <a class="active" href="#">Discord Guides</a>
+    <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/links.html">Links</a>
   </div><br>
   <div>
     <h1>Guides for Discord</h1>
