--- a/links.html
+++ b/links.html
@@ -6,7 +6,10 @@
   </head>
   <body>
     <div id="tabs">
-
-    </div>
+      <!--Tabs-->
+      <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/mainpage.html">Home</a>
+      <a href="#">Discord Guides</a>
+      <a class="active" href="https://jonahlikescookies.github.io/Summa-Discord-Website/links.html">Links</a>
+    </div><br>
   </body>
 </html>
