--- a/mainpage.html
+++ b/mainpage.html
@@ -11,6 +11,7 @@
     <!--Tabs-->
     <a class="active" href="#">Home</a>
     <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/discordguides.html">Discord Guides</a>
+    <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/links.html">Links</a>
   </div><br>
   <div>
     <h1>Welcome to the Summa Discord Server's Website!</h1>
