Added Comfortaa font

--- a/links.html
+++ b/links.html
@@ -3,6 +3,8 @@
   <head>
     <title>Summa Discord Server Website - Links</title>
     <link href="styles.css" rel="stylesheet">
+    <!--Comfortaa Font-->
+    <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
   </head>
   <body>
     <div id="tabs">
