Fixed tabs on links page

--- a/links.html
+++ b/links.html
@@ -10,8 +10,8 @@
     <div id="tabs">
       <!--Tabs-->
       <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/mainpage.html">Home</a>
-      <a href="#">Discord Guides</a>
-      <a class="active" href="https://jonahlikescookies.github.io/Summa-Discord-Website/links.html">Links</a>
+      <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/discordguides.html">Discord Guides</a>
+      <a class="active" href="#">Links</a>
     </div><br>
   </body>
 </html>
