--- a/links.html
+++ b/links.html
@@ -13,5 +13,13 @@
       <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/discordguides.html">Discord Guides</a>
       <a class="active" href="#">Links</a>
     </div><br>
+    <div>
+      <h1>Links</h1>
+      <h2>Forms:</h2>
+      <p>Appeals: <a class="link" href=https://dyno.gg/form/d154844c>https://dyno.gg/form/d154844c</a></p>
+      <p>General Purpose: <a class="link" href="https://dyno.gg/form/727e75a8">https://dyno.gg/form/727e75a8</a></p>
+      <p>Staff Applications: <a class="link" href="https://dyno.gg/form/23c83de7">https://dyno.gg/form/23c83de7</a></p>
+      <p class="footer">NOTE: You must be a member of the server to fill out the above forms.</p>
+    </div>
   </body>
 </html>
