--- a/discordguides.html
+++ b/discordguides.html
@@ -9,9 +9,9 @@
   <body>
   <div id="tabs">
     <!--Tabs-->
-    <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/mainpage.html">Home</a>
-    <a class="active" href="#">Discord Guides</a>
-    <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/links.html">Links</a>
+    <a class="tab" href="https://jonahlikescookies.github.io/Summa-Discord-Website/mainpage.html">Home</a>
+    <a class="active tab" href="#">Discord Guides</a>
+    <a class="tab" href="https://jonahlikescookies.github.io/Summa-Discord-Website/links.html">Links</a>
   </div><br>
   <div>
     <h1>Guides for Discord</h1>
