--- a/links.html
+++ b/links.html
@@ -9,9 +9,9 @@
   <body>
     <div id="tabs">
       <!--Tabs-->
-      <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/mainpage.html">Home</a>
-      <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/discordguides.html">Discord Guides</a>
-      <a class="active" href="#">Links</a>
+      <a class="tab" href="https://jonahlikescookies.github.io/Summa-Discord-Website/mainpage.html">Home</a>
+      <a class="tab" href="https://jonahlikescookies.github.io/Summa-Discord-Website/discordguides.html">Discord Guides</a>
+      <a class="active tab" href="#">Links</a>
     </div><br>
     <div>
       <h1>Links</h1>
