--- a/mainpage.html
+++ b/mainpage.html
@@ -9,9 +9,9 @@
   <body>
   <div id="tabs">
     <!--Tabs-->
-    <a class="active" href="#">Home</a>
-    <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/discordguides.html">Discord Guides</a>
-    <a href="https://jonahlikescookies.github.io/Summa-Discord-Website/links.html">Links</a>
+    <a class="active tab" href="#">Home</a>
+    <a class="tab" href="https://jonahlikescookies.github.io/Summa-Discord-Website/discordguides.html">Discord Guides</a>
+    <a class="tab" href="https://jonahlikescookies.github.io/Summa-Discord-Website/links.html">Links</a>
   </div><br>
   <div>
     <h1>Welcome to the Summa Discord Server's Website!</h1>
