Non-summas may join now.

--- a/mainpage.html
+++ b/mainpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Summa Discord Server Website - Main Page</title>
+    <title>MPMS Discord Server Website - Main Page</title>
     <link rel="stylesheet" href="styles.css">
     <!--Comfortaa Font-->
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
@@ -14,7 +14,7 @@
     <a class="tab" href="https://jonahlikescookies.github.io/Summa-Discord-Website/links.html">Links</a>
   </div><br>
   <div>
-    <h1>Welcome to the Summa Discord Server's Website!</h1>
+    <h1>Welcome to the MPMS Discord Server's Website!</h1>
     <p>&nbsp &nbsp &nbsp &nbspAs of late this website is incomplete, stay tuned for functionality!</p>
   </div>
   </body>
