--- a/discordguides.html
+++ b/discordguides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Summa Discord Server - Discord Guides</title>
+    <title>MPMS Discord Server - Discord Guides</title>
     <link rel="stylesheet" href="styles.css">
     <!--Comfortaa Font-->
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
