New links coming soon!!

--- a/links.html
+++ b/links.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Summa Discord Server Website - Links</title>
+    <title>MPMS Discord Server Website - Links</title>
     <link href="styles.css" rel="stylesheet">
     <!--Comfortaa Font-->
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
@@ -16,9 +16,11 @@
     <div>
       <h1>Links</h1>
       <h2>Forms:</h2>
-      <p>Appeals: <a class="link" href=https://dyno.gg/form/d154844c>https://dyno.gg/form/d154844c</a></p>
-      <p>General Purpose: <a class="link" href="https://dyno.gg/form/727e75a8">https://dyno.gg/form/727e75a8</a></p>
-      <p>Staff Applications: <a class="link" href="https://dyno.gg/form/23c83de7">https://dyno.gg/form/23c83de7</a></p>
+      <div style="display:none;">
+        <p>Appeals: <a class="link" href=https://dyno.gg/form/d154844c>https://dyno.gg/form/d154844c</a></p>
+        <p>General Purpose: <a class="link" href="https://dyno.gg/form/727e75a8">https://dyno.gg/form/727e75a8</a></p>
+        <p>Staff Applications: <a class="link" href="https://dyno.gg/form/23c83de7">https://dyno.gg/form/23c83de7</a></p>
+      </div>
       <p class="footer">NOTE: You must be a member of the server to fill out the above forms.</p>
     </div>
   </body>
