Links are now visible.

--- a/links.html
+++ b/links.html
@@ -16,12 +16,10 @@
     <div>
       <h1>Links</h1>
       <h2>Forms:</h2>
-      <div style="display:none;">
-        <p>Appeals: <a class="link" href=https://dyno.gg/form/d154844c>https://dyno.gg/form/d154844c</a></p>
-        <p>General Purpose: <a class="link" href="https://dyno.gg/form/727e75a8">https://dyno.gg/form/727e75a8</a></p>
-        <p>Staff Applications: <a class="link" href="https://dyno.gg/form/23c83de7">https://dyno.gg/form/23c83de7</a></p>
-      </div>
-      <p class="footer">NOTE: You must be a member of the server to fill out the above forms.</p>
+      <p>Appeals: <a class="link" href=https://dyno.gg/form/d154844c>https://dyno.gg/form/d154844c</a></p>
+      <p>Staff Applications: DM @B.S (aka big sam) for staff applications.</p>
+      <p>Court Cases: <a class="link" href="https://dyno.gg/form/23c83de7">https://dyno.gg/form/23c83de7</a></p>
+      <p class="footer">NOTE: You must be a member of the server to access the above forms.</p>
     </div>
   </body>
 </html>
