--- a/links.html
+++ b/links.html
@@ -17,7 +17,7 @@
       <h1>Links</h1>
       <h2>Forms:</h2>
       <p>Appeals: <a class="link" href=https://dyno.gg/form/d154844c>https://dyno.gg/form/d154844c</a></p>
-      <p>Staff Applications: DM @B.S (aka big sam) for staff applications.</p>
+      <p>Staff Applications: check the #welcome channel for staff applications.</p>
       <p>Court Cases: <a class="link" href="https://dyno.gg/form/23c83de7">https://dyno.gg/form/23c83de7</a></p>
       <p class="footer">NOTE: You must be a member of the server to access the above forms.</p>
     </div>
