--- a/mainpage.html
+++ b/mainpage.html
@@ -15,7 +15,12 @@
   </div><br>
   <div>
     <h1>Welcome to the MPMS Discord Server's Website!</h1>
-    <p>&nbsp &nbsp &nbsp &nbspAs of late this website is incomplete, stay tuned for functionality!</p>
+    <hr>
+    <h2>About</h2>
+    <hr>
+    <p>The MPMS Discord Server was a server originally intended for <strong>only</strong> Summa students. However, all MPMS students are welcome to join. Please understand that the staff is mostly Summa students, only because of the original purpose of the server.</p>
+    <hr>
+    <h2>WORK IN PROGRESS</h2>
   </div>
   </body>
 </html>
